# ENM612-group-project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
results/: blobs_3d_results.txt  breast_cancer_results.txt  heart_results.txt  ionosphere_results.txt  liver_results.txt  moons_results.txt  votes_results.txt  wbcd_results.txt  wbcp_results.txt
src/: dataset_loader.py  max_min.py  visualization.py
tests/: test_max_min.py
